TestRepo2/src/objects/NABCA_Sales_Data__c.object
<CustomObject>
    <fields>
        <fullName>Shelfdollar_For_last_Fiscal_Year_12__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month13_ShelfDollar_Volume__c,
8 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c,
9 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c,
10, Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c,
11, Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c,
12, Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c,
1 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c,
2 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c,
3 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c,
4 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c,
5 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c+Month3_ShelfDollar_Volume__c,
6 , Month13_ShelfDollar_Volume__c+Month12_ShelfDollar_Volume__c+Month11_ShelfDollar_Volume__c+Month10_ShelfDollar_Volume__c+Month9_ShelfDollar_Volume__c+Month8_ShelfDollar_Volume__c+Month7_ShelfDollar_Volume__c+Month6_ShelfDollar_Volume__c+Month5_ShelfDollar_Volume__c+Month4_ShelfDollar_Volume__c+Month3_ShelfDollar_Volume__c+Month2_ShelfDollar_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shelfdollar For last Fiscal Year 12</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shelfdollar_For_last_Fiscal_Year__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7, Month24_ShelfDollar_Volume__c,
8, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c,
9, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c,
10, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c,
11, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c,
12, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c,
1, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c,
2, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c,
3, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c,
4, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c,
5, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c,
6, Month24_ShelfDollar_Volume__c+Month23_ShelfDollar_Volume__c+Month22_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month21_ShelfDollar_Volume__c+Month20_ShelfDollar_Volume__c+Month19_ShelfDollar_Volume__c+Month18_ShelfDollar_Volume__c+Month17_ShelfDollar_Volume__c+Month16_ShelfDollar_Volume__c+Month15_ShelfDollar_Volume__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shelfdollar For last Fiscal Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_For_last_Fiscal_Year_10__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month15_9L_Volume__c,
8 , Month15_9L_Volume__c+Month14_9L_Volume__c,
9 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c,
10, Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c,
11, Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c,
12, Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c,
1 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c,
2 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c,
3 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c,
4 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c,
5 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c,
6 , Month15_9L_Volume__c+Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume For last Fiscal Year 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_For_last_Fiscal_Year_11__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month14_9L_Volume__c,
8 , Month14_9L_Volume__c+Month13_9L_Volume__c,
9 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c,
10, Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c,
11, Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c,
12, Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c,
1 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c,
2 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c,
3 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c,
4 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c,
5 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c,
6 , Month14_9L_Volume__c+Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c+Month3_9L_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume For last Fiscal Year 11</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_For_last_Fiscal_Year_12__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month13_9L_Volume__c,
8 , Month13_9L_Volume__c+Month12_9L_Volume__c,
9 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c,
10, Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c,
11, Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c,
12, Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c,
1 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c,
2 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c,
3 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c,
4 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c,
5 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c+Month3_9L_Volume__c,
6 , Month13_9L_Volume__c+Month12_9L_Volume__c+Month11_9L_Volume__c+Month10_9L_Volume__c+Month9_9L_Volume__c+Month8_9L_Volume__c+Month7_9L_Volume__c+Month6_9L_Volume__c+Month5_9L_Volume__c+Month4_9L_Volume__c+Month3_9L_Volume__c+Month2_9L_Volume__c
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume For last Fiscal Year 12</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_For_last_Fiscal_Year__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c), 7, Month24_9L_Volume__c, 
8, Month24_9L_Volume__c+Month23_9L_Volume__c, 
9, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c, 
10, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c, 
11, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c, 
12, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c, 
1, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c, 
2, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c, 
3, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c, 
4, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c, 
5, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c, 
6, Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume For last Fiscal Year</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_for_Fiscal_Year_10__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month27_9L_Volume__c,
8 , Month27_9L_Volume__c+Month26_9L_Volume__c,
9 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c,
10, Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c,
11, Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c,
12, Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c,
1 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c,
2 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c,
3 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c,
4 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c,
5 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c,
6 , Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume for Fiscal Year 10</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_for_Fiscal_Year_11__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month26_9L_Volume__c,
8 , Month26_9L_Volume__c+Month25_9L_Volume__c,
9 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c,
10, Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c,
11, Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c,
12, Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c,
1 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c,
2 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c,
3 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c,
4 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c,
5 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c,
6 , Month26_9L_Volume__c+Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume for Fiscal Year 11</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_for_Fiscal_Year_12__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c),
7 , Month25_9L_Volume__c,
8 , Month25_9L_Volume__c+Month24_9L_Volume__c,
9 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c,
10, Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c,
11, Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c,
12, Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c,
1 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c,
2 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c,
3 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c,
4 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c,
5 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c,
6 , Month25_9L_Volume__c+Month24_9L_Volume__c+Month23_9L_Volume__c+Month22_9L_Volume__c+Month21_9L_Volume__c+Month20_9L_Volume__c+Month19_9L_Volume__c+Month18_9L_Volume__c+Month17_9L_Volume__c+Month16_9L_Volume__c+Month15_9L_Volume__c+Month14_9L_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume for Fiscal Year 12</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_for_Fiscal_Year__c</fullName>
        <formula>CASE(MONTH(Month_End_Date__c), 7, Month36_9L_Volume__c, 
8,Month36_9L_Volume__c+Month35_9L_Volume__c, 
9, Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c, 
10,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c, 
11,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c, 
12,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c, 
1,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c, 
2,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c+Month29_9L_Volume__c, 
3,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c+Month29_9L_Volume__c+Month28_9L_Volume__c, 
4,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c+Month29_9L_Volume__c+Month28_9L_Volume__c+Month27_9L_Volume__c, 
5,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c+Month29_9L_Volume__c+Month28_9L_Volume__c+Month27_9L_Volume__c+Month26_9L_Volume__c, 
6,Month36_9L_Volume__c+Month35_9L_Volume__c+Month34_9L_Volume__c+Month33_9L_Volume__c+Month32_9L_Volume__c+Month31_9L_Volume__c+Month30_9L_Volume__c+Month29_9L_Volume__c+Month28_9L_Volume__c+Month27_9L_Volume__c+Month26_9L_Volume__c+Month25_9L_Volume__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume for Fiscal Year</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>NABCA Sales Data</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NS-{MM}{DD}{YYYY}-{000000000}</displayFormat>
        <label>NABCA Sales Volume ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NABCA Sales Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>